Revert "Fix/COG-69/content fo modal visible for small screen resolution"

--- a/src/component/scss/components.scss
+++ b/src/component/scss/components.scss
@@ -199,11 +199,8 @@ ul.listbox {
     margin: auto;
     left: 0;
     right: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    max-width: 100vw;
-    max-height: calc(100vh - 40px);
-    
+    overflow: hidden;
+
     .modal-close {
         position: absolute;
         right: 12px;
